# jobcafe

./: CMakeLists.txt  jobcafe  jobcafe.pro  qml.qrc  qtquickcontrols2.conf
src/: appstate.cpp  appstate.h  download.cpp  download.h  main.cpp  upload.cpp  upload.h
ui/: AppConfig.qml  Main.qml  Style.qml  Utils.js
ui/About/: About.qml  AboutUs.qml  TermsOfUse.qml
ui/AppState/: AppState.qml
ui/BackButton/: BackButton.qml
ui/ErrorMessage/: ErrorMessage.qml
ui/Introduction/: SplashScreen.qml  Welcome.qml
ui/JTabButton/: JTabButton.qml
ui/LoadingMessage/: LoadingMessage.qml
ui/Login/: CreateNewPassword.qml  CreateNewPasswordForm.ui.qml  EnterVerificationCode.qml  EnterVerificationCodeForm.ui.qml  ForgotPassword.qml  ForgotPasswordForm.ui.qml  Login.qml  NextButton.qml  SignIn.qml  SignInForm.ui.qml  SignUp.qml  SignUpForm.ui.qml
ui/MainActivity/: Follow.qml  Frame.qml  Home.qml  HomeForm.ui.qml  HomeFrame.qml  MyFiles.qml  MyFilesForm.ui.qml  SideMenu.qml  SideMenuElement.qml  SideMenuForm.ui.qml  Templates.qml  TemplatesForm.ui.qml
ui/Payment/: Ellipse.qml  MyPlan.qml  MyPlanText.qml  PaymentCart.qml  PaymentCartForm.ui.qml  PaymentCompleted.qml  PaymentCompletedForm.ui.qml  PaymentDetails.qml  PaymentDetailsForm.ui.qml  PaymentPlan.qml  PaymentPlanForm.ui.qml  PaymentPlanFrame.qml  PaymentSummary.qml  PaymentSummaryForm.ui.qml  PaymentText.qml  Timeline.qml  TimelineElement.qml
ui/Profile/: Entry.qml  Profile.qml  ProfileForm.ui.qml
ui/Setting/: Notification.qml  NotificationForm.ui.qml  NotificationSwitch.qml  Password.qml  PasswordForm.ui.qml  (+2 more)
(+15 files in other folders)
